--- a/src/index.css
+++ b/src/index.css
@@ -159,6 +159,13 @@ html {
   );
 }
 
+.activeDDBtn {
+  @apply w-[96%] py-2 px-4 border-2 bg-[#DC4674] text-white rounded-md cursor-pointer;
+}
+.inActiveDDBtn {
+  @apply w-[96%] py-2 px-4 border-2 border-[#DC4674] text-[#DC4674] rounded-md cursor-pointer hover:bg-[#dc46732c] transition-colors;
+}
+
 @keyframes typing {
   0% {
     content: "";
